// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show Job to Contractor has expected html structure 1`] = `
<div>
  <!---->
  <div class="container">
    <div class="col-xs-12 col-sm-10 col-md-8 offset-md-2 offset-sm-1 column">
      <h1>abc</h1>
      <!---->
      <div class="row">
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Bid</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Date:</strong></h6>
                <div>03/23/2017</div>
                <br>
                <h6><strong>Email:</strong></h6>
                <div>abc@xyz.com</div>
                <br>
                <h6><strong>Due To Benchmark:</strong></h6>
                <div>06/01/2017 08:30 AM EDT</div>
                <div>06/01/2017 07:30 AM CDT</div>
              </div>
            </div>
          </div>
        </div>
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Prebid</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Date &amp; Time:</strong></h6>
                <div>07/01/2018 06:30 PM EDT</div>
                <div>07/01/2018 05:30 PM CDT</div>
                <br>
                <h6><strong>Address</strong></h6>
                <div>123 Main St.</div>
              </div>
            </div>
          </div>
        </div>
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Details</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Taxable</strong></h6>
                <div>Yes</div>
                <br>
                <h6><strong>Subcontractor Bonding</strong></h6>
                <div>No</div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="lister">
          <h4>Bidding Documents</h4>
          <ul class=""></ul>
        </div>
      </div>
      <div class="row">
        <div class="uploader">
          <h4>Add Bidding Documents</h4>
          <!---->
          <div id="" class="vue-dropzone dropzone dz-clickable">
            <!---->
            <div class="dz-default dz-message"><span>Drop files here to upload</span></div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Show Job to Contractor shows job for subcontractor 1`] = `
<div>
  <div class="jumbotron">
    <div class="row">
      <h4 class="offset-md-1 col-md-10">Welcome To The</h4>
      <div class="offset-md-1 col-md-10">
        <img src="../assets/logo1.png" alt="Benchmark logo" class="src">
      </div>
      <div class="offset-md-1 col-md-10 text">
        <h1>Planroom</h1>
      </div>
    </div>
  </div>
  <div class="container">
    <div class="col-xs-12 col-sm-10 col-md-8 offset-md-2 offset-sm-1 column">
      <h1></h1>
      <h6 class="expiration">You can access this job unitl 11/7/2018 10:50 PM EST </h6>
      <div class="row">
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Bid</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Date:</strong></h6>
                <div></div>
                <br>
                <h6><strong>Email:</strong></h6>
                <div></div>
                <br>
                <h6><strong>Due To Benchmark:</strong></h6>
                <div></div>
                <div></div>
              </div>
            </div>
          </div>
        </div>
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Prebid</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Date &amp; Time:</strong></h6>
                <div></div>
                <div></div>
                <br>
                <h6><strong>Address</strong></h6>
                <div></div>
              </div>
            </div>
          </div>
        </div>
        <div class="col-lg-4 col-md-6 col-sm-12 column">
          <div class="card">
            <h5 class="card-header">Details</h5>
            <div class="card-body">
              <div class="card-text">
                <h6><strong>Taxable</strong></h6>
                <div></div>
                <br>
                <h6><strong>Subcontractor Bonding</strong></h6>
                <div></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="row">
        <div class="lister">
          <h4>Bidding Documents</h4>
          <ul class=""></ul>
        </div>
      </div>
      <!---->
    </div>
    <div class="row">
      <div class="col-lg-2 offset-lg-4 col-md-12">
        <div class="info">
          <font-awesome-icon-stub icon="map-marker-alt"></font-awesome-icon-stub>&nbsp;&nbsp;318 E. Monroe St.</div>
        <div class="info">Kokomo, IN 46901</div>
      </div>
      <div class="col-lg-2 col-md-12">
        <div class="info">
          <font-awesome-icon-stub icon="phone"></font-awesome-icon-stub>&nbsp;&nbsp;(765) 452-9500</div>
        <div class="info">
          <font-awesome-icon-stub icon="fax"></font-awesome-icon-stub>&nbsp;&nbsp;(765) 452-9505</div>
      </div>
    </div>
  </div>
</div>
`;
